crates/doodle-core/tests/snapshots/broken_syntax__04_missing_comma.snap
---
source: crates/doodle-core/tests/broken_syntax.rs
expression: "render_diagnostics(&diagnostics, &view)"
---
error[syntax-error]: expected `)` to close this call
  --> 04-missing-comma.doodle:1:5
1 | show(1 2)
  |     ^
